BugFix: Navigation Mobile whitespace and linebreak issues

--- a/css/pages/section/navigation-section.css
+++ b/css/pages/section/navigation-section.css
@@ -31,18 +31,21 @@
 		left: 0;
 		width: 100vw;
 		min-height: 100vh;
-		white-space: pre-wrap;
+		/*white-space: pre-wrap;*/
 		background-color: rgba(255,255,255,0.85);
 		transform: translateX(100%);
 		transition: transform .3s ease-out;
-		padding-right: var(--space-150);
+		/*padding-right: var(--space-150);*/
 	}
 	.navigation-section .navigation .link {
 		display: inline-block;
+		margin-right: var(--space-50);
 	}
 
 	.navigation-section .navigation .link:first-child {
 		opacity: 0.5;
+		margin-top: var(--space-50);
+		margin-bottom: var(--space-25);
 	}
 
 	.navigation-section .navigation .link.active {
